--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,7 +1,7 @@
 @import './../../styles.scss';
 
-.field{
-    @include size($w: 100vw ,$wm: 100%, $h: 100vh);
+.field {
+    @include size($w: 100vw, $wm: 100%, $h: 100vh);
     /* width: 100vw;
     height: 100vh;
     max-width: 100%; */
@@ -11,17 +11,47 @@
     background-image: url('./../../assets/img/board.jpg'); //./../..
     @include dFlex();
     //position: relative;
-   }
+}
 
-   .cardStack {
-     position: relative;
-   
-   
-    img{
+.cardStack {
+    position: relative;
+
+    img {
         position: absolute;
         width: 120px;
         height: auto;
         // position: absolute;
     }
-   }
 
+}
+
+.topCard {
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.1) translateY(-10px);
+    }
+}
+
+.pickCard{
+    // transition: all 225ms ease-in-out;
+    animation: pickCardAnimation 1s ease-in-out;
+    transform: scale(1) translate(200px, -200px) rotate(-10deg);
+}
+
+@keyframes pickCardAnimation {
+    0%{
+        transform: scale(1) ;
+    }
+    40%{
+        transform: scale(1.7) ;
+    }
+    60%{
+        transform: scale(1.7);
+    }
+    100%{
+        transform: scale(1.1) translate(200px, -200px) rotate(-10deg);
+    }
+    
+}
