pop and push works for the drwan card

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,7 +4,11 @@
     <div class="cardStack">
 
         <img *ngFor="let c of [0,1,2,3,4]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="assets/img/cards/gray_back.png" alt="">
+        
+        <img *ngFor="let playedCard of game.playedCards" class="playedCard" src="assets/img/cards/{{ playedCard }}.png" alt="">
+        
         <img (click)="takeCard()" class="topCard" style="right: 25px;" src="assets/img/cards/gray_back.png" alt="">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pickCard" style="right: 25px;" src="assets/img/cards/spade_1.png" alt="">
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pickCard" style="right: 25px;" src="assets/img/cards/{{ currentCard }}.png" alt="">
+
     </div>
 </div>
