--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,14 +1,16 @@
+<app-player style="top: 100px;" class="playerPosition"></app-player>
+
 <div class="field">
 
     <!-- <img src="./../../assets/img/board.jpg" alt=""> -->
     <div class="cardStack">
-
+        <!-- Card Stack -->
         <img *ngFor="let c of [0,1,2,3,4]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="assets/img/cards/gray_back.png" alt="">
-        
-        <img *ngFor="let playedCard of game.playedCards" class="playedCard" src="assets/img/cards/{{ playedCard }}.png" alt="">
-        
         <img (click)="takeCard()" class="topCard" style="right: 25px;" src="assets/img/cards/gray_back.png" alt="">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pickCard" style="right: 25px;" src="assets/img/cards/{{ currentCard }}.png" alt="">
+        <!-- Stack for played cards -->
+        <img *ngFor="let playedCard of game.playedCards" class="playedCard" src="assets/img/cards/{{ playedCard }}.png" alt="">
+        <!-- drawn card animation -->
+         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pickCard" style="right: 25px;" src="assets/img/cards/{{ currentCard }}.png" alt="">
 
     </div>
 </div>
