--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,5 +1,5 @@
 @import './../../styles.scss';
-
+//$random-rotation: random(360);
 .field {
     @include size($w: 100vw, $wm: 100%, $h: 100vh);
     /* width: 100vw;
@@ -36,13 +36,13 @@
 
 .playedCard{
         right: 25px;
-        transform: scale(1) translate(200px, -200px) rotate(-10deg);
+        transform: scale(1) translate(200px, -200px) rotate(-10deg); //$random-rotation + deg
 }
 
 .pickCard{
     // transition: all 225ms ease-in-out;
     animation: pickCardAnimation 1s ease-in-out;
-    transform: scale(1) translate(200px, -200px) rotate(-10deg);
+    transform: scale(1) translate(200px, -200px) rotate(-10deg); //$random-rotation + deg
 }
 
 @keyframes pickCardAnimation {
@@ -52,11 +52,16 @@
     40%{
         transform: scale(1.7) ;
     }
-    60%{
+  /*   60%{
         transform: scale(1.7);
-    }
+    } */
+    
     100%{
-        transform: scale(1.1) translate(200px, -200px) rotate(-10deg);
+        transform: scale(1) translate(200px, -200px) rotate(-10deg); //$random-rotation + deg
     }
     
+}
+.playerPosition{
+    position: absolute;
+    right: 0;
 }
