--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -8,7 +8,7 @@
     // background-position: center;
     // background-size: cover;
     // background-color: aqua;
-    background-image: url('./../../assets/img/board.jpg'); //./../..
+    background-image: url('../../assets/img/board.jpg'); //./../..
     @include dFlex();
     //position: relative;
 }
@@ -64,4 +64,10 @@
 .playerPosition{
     position: absolute;
     right: 0;
+}
+
+.btn-add{
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
 }
