--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,5 @@ body {
     width: $w;
     max-width: $wm;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
