--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -22,8 +22,13 @@
     </div>
 </div>
 
+<div class="infoPlusAddPlayer">
+    <app-game-info [card]="currentCard" ></app-game-info>
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon ><span class="material-symbols-outlined">
         person_add
         </span></mat-icon>
   </button>
+
+  
+</div>
