--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -66,8 +66,17 @@
     right: 0;
 }
 
-.btn-add{
+
+.infoPlusAddPlayer{
+    // background-color: aliceblue;
     position: absolute;
-    bottom: 50px;
-    right: 50px;
+    bottom: 10px;
+    left: 40px;
+    right: 40px;
+    @include dFlex($jc: space-between, $g: 20px); 
+    height: 80px;
+}
+
+app-game-info{
+    height: 100%
 }
